# sparrow

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  flake.nix
src/: cfg.rs  main.rs  payload.rs  utils.rs
src/host/: connection.rs  local.rs  mod.rs  rsync.rs  slurm_cluster.rs
src/run/: default.rs  mod.rs
src/runner/: default.rs  mod.rs  snakemake.rs
