[package]
name = "sparrow"
version = "0.4.2"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
camino = { version = "1.1.9", features = ["serde", "serde1"] }
clap = { version = "4.5.17", features = ["derive"] }
clap_complete = "4.5.28"
config = "0.14.0"
enum_dispatch = "0.3.13"
fastrand = "2.1.1"
futures = "0.3.30"
git2 = "0.19.0"
minijinja = "2.3.1"
open = "5.3.2"
openssh = "0.11.2"
rusync = "0.7.2"
serde = "1.0.210"
tempfile = "3.12.0"
tokio = { version = "1.40.0", features = ["full"] }
url = { version = "2.5.2", features = ["serde"] }
url_serde = "0.2.0"
walkdir = "2.5.0"
